--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "draft-js": "^0.10.5",
     "draft-js-editor": "^1.12.3",
     "firebase": "^5.0.3",
     "node-sass": "^4.7.1"
